# jsonschema-llm

./: .gitignore  .gitmodules  COMPATIBILITY.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README-npm.md  README.md  ROADMAP.md  docker-compose.test.yml  original_stress_test_report.md  pnpm-lock.yaml  pnpm-workspace.yaml  stress_test_report.md  test_url.rs
.gemini/: AGENTS.md  instructions.md
.github/workflows/: ci.yml  pypi-publish.yml
bindings/go/: conformance_test.go  go.mod  jsl.go  jsl_test.go
bindings/java/: build.gradle.kts  pom.xml  settings.gradle.kts
bindings/java-wasi/: build.gradle.kts  settings.gradle.kts
bindings/python/: README.md  json_schema_llm_wasi.py  jsonschema_llm_wasi.py  pyproject.toml  test_conformance.py  test_types.py  test_wasi.py
bindings/python-wasi/: jsonschema_llm_wasi.py  requirements.txt  test_conformance.py  test_wasi.py
bindings/python/json_schema_llm_wasi/: __init__.py  engine.py  types.py
bindings/ruby/: Gemfile  Rakefile  test_conformance.rb  test_jsl.rb
bindings/ts/: package.json  pnpm-lock.yaml
bindings/ts-wasi/: package.json  tsconfig.json
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_e2e_tests.rs  cli_tests.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: java.rs  lib.rs  python.rs  ruby.rs  typescript.rs
crates/codegen/templates/java/: Component.java.tera  Generator.java.tera  JsonPatchOp.java.tera  README.md.tera  pom.xml.tera
crates/codegen/templates/python/: README.md.tera  component.py.tera  generator.py.tera  json_patch.py.tera  pyproject.toml.tera
crates/codegen/templates/ruby/: README.md.tera  component.rb.tera  gemspec.tera  generator.rb.tera  gitignore.tera  json_patch.rb.tera
crates/codegen/templates/typescript/: README.md.tera  component.ts.tera  index.ts.tera  json_patch.ts.tera  package.json.tera  tsconfig.json.tera
crates/json-schema-llm-core/: Cargo.toml
crates/json-schema-llm-core/benches/: benchmarks.rs
crates/json-schema-llm-core/src/: codec.rs  codec_warning.rs  error.rs  extract.rs  lib.rs  schema_utils.rs
crates/json-schema-llm-core/src/passes/: mod.rs  p1_composition.rs  p2_polymorphism.rs  p5_recursion.rs  p6_strict.rs  p7_constraints.rs  p8_adaptive_opaque.rs  p9_provider_compat.rs  pass_result.rs  pass_utils.rs
crates/json-schema-llm-core/src/rehydrator/: coercion.rs  constraints.rs  mod.rs  transforms.rs  walker.rs
crates/json-schema-llm-core/src/validation/: strict_mode.rs
crates/json-schema-llm-core/tests/: e2e_strict_emission.rs  e2e_tests.rs  ffi_tests.rs  json_schema_test_suite.rs  p9_acceptance_tests.rs  pipeline_tests.rs  proptest_malformed.rs  proptest_path.rs  proptest_roundtrip.rs  validate_strict_mode.rs
crates/json-schema-llm-wasi/: Cargo.toml
crates/json-schema-llm-wasi/src/: lib.rs
crates/json-schema-llm-wasm/: Cargo.toml
crates/json-schema-llm-wasm/src/: lib.rs
crates/json-schema-llm-wasm/tests/: wasm_smoke.rs
crates/jsonschema-llm-core/: Cargo.toml
crates/jsonschema-llm-core/benches/: benchmarks.rs
crates/jsonschema-llm-core/src/: anchor_utils.rs  codec.rs  codec_warning.rs  config.rs  error.rs  extract.rs  lib.rs  rehydrator.rs  resolver.rs  schema_utils.rs  schema_walker.rs
crates/jsonschema-llm-core/src/passes/: mod.rs  p0_normalize.rs  p1_composition.rs  p2_polymorphism.rs  p3_dictionary.rs  p4_opaque.rs  p5_recursion.rs  p6_strict.rs  p7_constraints.rs  p9_provider_compat.rs  pass_result.rs
crates/jsonschema-llm-core/src/rehydrator/: mod.rs  transforms.rs
crates/jsonschema-llm-core/tests/: e2e_tests.rs  ffi_tests.rs  p9_acceptance_tests.rs  pipeline_tests.rs  proptest_malformed.rs  proptest_roundtrip.rs
crates/jsonschema-llm-java/: Cargo.toml  build.rs  cbindgen.toml
crates/jsonschema-llm-java/src/: lib.rs
crates/jsonschema-llm-java/tests/: ffi_tests.rs
crates/jsonschema-llm-python/: Cargo.toml  pyproject.toml
crates/jsonschema-llm-python/src/: lib.rs
crates/jsonschema-llm-python/tests/: _contract_fixtures.py  conftest.py  test_acceptance.py  test_contract.py
crates/jsonschema-llm-wasi/: Cargo.toml
crates/jsonschema-llm-wasi/src/: lib.rs
crates/jsonschema-llm-wasm/: Cargo.toml
crates/jsonschema-llm-wasm/src/: lib.rs
crates/jsonschema-llm-wasm/tests/: wasm_smoke.rs
docker/: test-dotnet.Dockerfile  test-go.Dockerfile  test-java.Dockerfile  test-python.Dockerfile  test-ruby.Dockerfile  test-ts.Dockerfile
docs/: FUTURE_BLOCKERS.md  STRICT_MODE_RULES.md  algorithm.md  bridge_api.md  cli-java.md  cli-python.md  cli-typescript.md
dx_test/ts_sdk/: package.json  smoke_test.ts  test_typescript.ts
engine/java/: pom.xml
engine/python/: pyproject.toml
engine/python/json_schema_llm_engine/: __init__.py  engine.py  formatter.py  transport.py  types.py
engine/python/json_schema_llm_engine/formatters/: chat_completions.py  claude.py  gemini.py  open_responses.py
engine/python/jsonschema_llm_engine/: __init__.py  engine.py  exceptions.py  formatter.py  transport.py
engine/python/jsonschema_llm_engine/formatters/: __init__.py  chat_completions.py  claude.py  gemini.py  open_responses.py
engine/python/tests/: test_engine.py  test_engine_e2e.py  test_engine_wasi.py
engine/ruby/: Gemfile  Rakefile
engine/typescript/: package.json  tsconfig.json
examples/stress-test-bot/: package-lock.json  package.json  pnpm-lock.yaml
examples/stress-test-bot-go/: go.mod  go.sum  main.go
examples/stress-test-bot-java/: README.md  build.gradle.kts  settings.gradle.kts
examples/stress-test-bot-python/: README.md  main.py  test_client.py
fixtures/arazzo/: README.md
fixtures/oas31/: README.md
fuzz/fuzz_targets/: fuzz_convert.rs
sandbox/azure-test/: pom.xml
scripts/: assemble-npm.sh  generate-fixtures.sh  preprocess-asyncapi.py  test-wrappers.sh
scripts/stress/: compare_reports.py  expected_failures.json  generate_basic_stress.py  requirements.txt  run_cli_test.py  test_hint_experiment.py
tests/: p0_bug.rs
tests/conformance/: fixtures.json
tests/contract-node/: contract.test.js  package.json  pnpm-lock.yaml  tsconfig.json  types.test.ts  vitest.config.ts
(+542 files in other folders)
