[workspace]
members = [
    "crates/jsonschema-llm-core",
    "crates/jsonschema-llm-wasi",
    "crates/jsonschema-llm-wasm",
    "cli",
]
# WASI crate requires wasm32-wasip1 target — build explicitly via:
#   cargo check -p jsonschema-llm-wasi --target wasm32-wasip1
default-members = [
    "crates/jsonschema-llm-core",
    "crates/jsonschema-llm-wasm",
    "cli",
]
resolver = "2"
