[workspace]
members = [
    "crates/json-schema-llm-core",
    "crates/json-schema-llm-wasi",
    "crates/json-schema-llm-wasm",
    "crates/codegen",
    "cli",
]
# WASI crate requires wasm32-wasip1 target — build explicitly via:
#   cargo check -p json-schema-llm-wasi --target wasm32-wasip1
default-members = [
    "crates/json-schema-llm-core",
    "crates/json-schema-llm-wasm",
    "crates/codegen",
    "cli",
]
resolver = "2"
