[package]
name = "jsonschema-llm"
version = "0.1.0"
edition = "2021"
description = "CLI for converting JSON Schemas to LLM-compatible structured output schemas"
license = "Apache-2.0"
repository = "https://github.com/dotslashderek/jsonschema-llm"

[[bin]]
name = "jsonschema-llm"
path = "src/main.rs"

[dependencies]
jsonschema-llm-core = { path = "../crates/jsonschema-llm-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
