[package]
name = "json-schema-llm"
version = "0.1.0"
edition = "2021"
description = "CLI for converting JSON Schemas to LLM-compatible structured output schemas"
license = "Apache-2.0"
repository = "https://github.com/dotslashderek/json-schema-llm"

[[bin]]
name = "json-schema-llm"
path = "src/main.rs"

[dependencies]
json-schema-llm-core = { path = "../crates/json-schema-llm-core" }
json-schema-llm-codegen = { path = "../crates/codegen" }
clap = { version = "4", features = ["derive"] }
serde = "1"
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
