[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json-schema-llm-wasi"
version = "0.1.0"
description = "WASI wrapper for json-schema-llm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wasmtime>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["json_schema_llm_wasi"]
