[package]
name = "json-schema-llm-codegen"
version = "0.1.0"
edition = "2021"
description = "SDK code generator for json-schema-llm"
license = "Apache-2.0"
repository = "https://github.com/dotslashderek/json-schema-llm"

[dependencies]
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
heck = "0.5"
rust-embed = "8"

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
