[package]
name = "json-schema-llm-core"
version = "0.1.0"
edition = "2021"
description = "Convert any JSON Schema into an LLM-compatible structured output schema"
license = "Apache-2.0"
repository = "https://github.com/dotslashderek/json-schema-llm"
readme = "../../README.md"
keywords = ["json-schema", "llm", "structured-output", "openai", "schema"]
categories = ["encoding", "parser-implementations", "wasm"]

[dependencies]
json-patch = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
regex = "1"
url = "2"

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "benchmarks"
harness = false
