[package]
name = "json-schema-llm-wasi"
version = "0.1.0"
edition = "2021"
description = "WASI universal binary for json-schema-llm (polyglot consumption via wasmtime/wazero/wasmer)"
license = "Apache-2.0"
repository = "https://github.com/dotslashderek/json-schema-llm"

[lib]
crate-type = ["cdylib"]

[dependencies]
json-schema-llm-core = { path = "../json-schema-llm-core" }
serde_json = "1"
