[package]
name = "json-schema-llm-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for json-schema-llm (convert/rehydrate)"
license = "Apache-2.0"
repository = "https://github.com/dotslashderek/json-schema-llm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
serde-wasm-bindgen = "0.6"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
json-schema-llm-core = { path = "../json-schema-llm-core" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
