[package]
name = "jsonschema-llm-java"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "jsonschema_llm_java"

[dependencies]
jsonschema-llm-core = { path = "../jsonschema-llm-core" }
jni = "0.21"
libc = "0.2"

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
serde_json = "1.0"
