[package]
name = "jsonschema-llm-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for jsonschema-llm (convert/rehydrate)"
license = "Apache-2.0"
repository = "https://github.com/dotslashderek/jsonschema-llm"

[lib]
name = "jsonschema_llm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
pythonize = "0.27"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
jsonschema-llm-core = { path = "../jsonschema-llm-core" }
