[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "jsonschema-llm"
version = "0.1.0"
description = "Convert JSON Schema to LLM-compatible structured output with round-trip rehydration"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]
keywords = ["json-schema", "llm", "openai", "structured-output"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "jsonschema_llm"
