[package]
name = "jsonschema-llm-wasi"
version = "0.1.0"
edition = "2021"
description = "WASI universal binary for jsonschema-llm (polyglot consumption via wasmtime/wazero/wasmer)"
license = "Apache-2.0"
repository = "https://github.com/dotslashderek/jsonschema-llm"

[lib]
crate-type = ["cdylib"]

[dependencies]
jsonschema-llm-core = { path = "../jsonschema-llm-core" }
serde_json = "1"
