[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "json-schema-llm-engine"
version = "0.1.0"
description = "Generic Python engine for LLM roundtrip orchestration with JSON Schema validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wasmtime>=24.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end tests requiring the WASM binary"]

[tool.setuptools.package-data]
json_schema_llm_engine = ["wasm/*.wasm"]
